--- a/templates/pcharts.html
+++ b/templates/pcharts.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
     <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-    <link rel="stylesheet" href="static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/style1.css">
  
 </head>
 
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href="index.html">Home
+            <a class="navbar-brand" href="http://127.0.0.1:5000/">Home
               <!-- <img class="nav-ufo" src="static/images/3000.webp"> -->
             </a>
           </div>
@@ -45,7 +45,7 @@
               fourth, with Montana having more then twice the amount of incidents
             </p>
             <br>
-            <img src="static/images/top20states.png" alt="top20states" style="width:100%">
+            <img src="../static/images/top20states.png" alt="top20states" style="width:100%">
           </div>
           <div class="column">
             <h3>Acres Burned vs Fire Duration</h3>
@@ -55,7 +55,7 @@
               burned. After 100 days, all fires in our dataset were under control with minimal burning.
             </p>
             <br>
-          <img src="static/images/pairplot.png" alt="pairplot" style="width:100%">
+          <img src="../static/images/pairplot.png" alt="pairplot" style="width:100%">
         </div>
             
           </div>
@@ -66,17 +66,17 @@
             <br>
             <p>Looking at the data grouped by month, We can clearly see that the number of wildfires in winter is relatively low and that it significantly increases in the summer, especially in June and July</p>
             <br>
-            <img src="static/images/months.png" alt="months" style="width:100%">
+            <img src="../static/images/months.png" alt="months" style="width:100%">
           </div>
             <div class="column">
                 <h3>Top Causes</h3>
                 <br>
-                <p>Tree Map with the top causes of wildfires shows us that the biggest cause of wildfires
+                <p>Square plot with the top causes of wildfires shows us that the biggest cause of wildfires is
                   lighting. For a good chunk of it, the cause of the fire is not
                 known.  </p>
                 <br>
                 <br>
-              <img src="static/images/topcauses.png" alt="topcauses" style="width:100%">
+              <img src="../static/images/topcauses.png" alt="topcauses" style="width:100%">
             </div>
         </div>
 
@@ -86,9 +86,9 @@
     <div id="map"></div>
 
     <!-- API key -->
-    <script type="text/javascript" src="static/js/config.js"></script>
+    <script type="text/javascript" src="../static/js/config.js"></script>
     <!-- JS  -->
-    <script type="text/javascript" src="static/js/logic.js"></script>
+    <script type="text/javascript" src="../static/js/logic.js"></script>
 </body>
 
 </html>
