changes in html

--- a/templates/index.html
+++ b/templates/index.html
@@ -34,8 +34,8 @@
       <div class="row">
         <div class="col-md-12 text-center">
          
-          <a class="btn btn-warning btn-lg" href="/analysis" role="button">Wildfire Analysis Charts</a>          
-          <a class="btn btn-danger btn-lg" href="/data" role="button">Wildfire Data</a>
+          <a class="btn btn-warning btn-lg" href="https://wildfire-2021.herokuapp.com//analysis" role="button">Wildfire Analysis Charts</a>          
+          <a class="btn btn-danger btn-lg" href="https://wildfire-2021.herokuapp.com//data" role="button">Wildfire Data</a>
         
           <hr>
         </div>
