changes in html

--- a/templates/data.html
+++ b/templates/data.html
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="https://wildfire-2021.herokuapp.com/">Home
+          <a class="navbar-brand" href=" http://127.0.0.1:5000/">Home
             <!-- <img class="nav-ufo" src="static/images/3000.webp"> -->
           </a>
         </div>
