--- a/templates/pcharts.html
+++ b/templates/pcharts.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-default">
         <div class="container-fluid">
           <div class="navbar-header">
-            <a class="navbar-brand" href=" http://127.0.0.1:5000/">Home
+            <a class="navbar-brand" href="/">Home
               <!-- <img class="nav-ufo" src="static/images/3000.webp"> -->
             </a>
           </div>
