--- a/static/css/style.css
+++ b/static/css/style.css
@@ -35,3 +35,13 @@ p {
   color: #000000;
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.backgrou {
+  background-image: url("/w3images/photographer.jpg");
+  background-color: #cccccc;
+  height: 500px;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  }
